--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title_left    : "Tiago C. F "
 title_right   : "caotic" # default: ""
 description   : "My blog"
 keywords      : "caotic"
-url           : https://heiswayi.github.io/thinkspace # site url
+url           : https://caotic123.github.io/tiagocampos/ # site url
 baseurl       : "" # apply repo name like "/myproject" if used under gh-pages branch, else (under master branch) just leave empty/blank
 cover         : "" # image uri like logo/cover image for site seo
 
