--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ cover         : "" # image uri like logo/cover image for site seo
 google_analytics  : UA-XXXXX-XX
 twitter_username  : ""
 comments_enabled  : true # if enabled (set to true), please provide your disqus_username
-disqus_shortname  : "@disqus_X4vVtMtCyv"
+disqus_shortname  : "tiagocampos"
 postshare_enabled : true
 
 # Build settings
